# orientdb-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: coverage.yml  test.yaml  test.yml
ci/: script.sh
docker-compose/: docker-compose.yaml
orientdb/: Cargo.toml
orientdb-client/: .env  CHANGELOG.md  Cargo.toml  README.md
orientdb-client/examples/: async-live-query.rs  async-pooled-sessions.rs  async-simple.rs  async-sugar.rs  async-tokio-simple.rs  pooled-sessions.rs  query-session.rs  simple.rs
orientdb-client/src/: lib.rs  session.rs  statement.rs
orientdb-client/src/asynchronous/: client.rs  live.rs  live_statement.rs  mod.rs  server_statement.rs  session.rs  statement.rs
orientdb-client/src/asynchronous/c3p0/: builder.rs  config.rs  error.rs  mod.rs  pool.rs
orientdb-client/src/asynchronous/network/: cluster.rs  conn.rs  decoder.rs  mod.rs  reader.rs  stream.rs
orientdb-client/src/asynchronous/types/: mod.rs  resultset.rs
orientdb-client/src/common/: mod.rs
orientdb-client/src/common/protocol/: buffer.rs  constants.rs  deserializer.rs  mod.rs  serializer.rs
orientdb-client/src/common/protocol/messages/: mod.rs  request.rs  response.rs
orientdb-client/src/common/protocol/v37/: deserializer.rs  serializer.rs
orientdb-client/src/common/types/: bag.rs  document.rs  error.rs  live.rs  mod.rs  projection.rs  result.rs  rid.rs  value.rs
orientdb-client/src/protocol/: io.rs
orientdb-client/src/sync/: client.rs  mod.rs  server_statement.rs  session.rs  statement.rs
orientdb-client/src/sync/network/: cluster.rs  conn.rs  mod.rs
orientdb-client/src/sync/protocol/: decoder.rs  encoder.rs  io.rs  mod.rs
orientdb-client/src/sync/protocol/v37/: decoder.rs  encoder.rs
orientdb-client/src/sync/types/: mod.rs  resultset.rs
orientdb-client/src/types/: error.rs  resultset.rs
orientdb-client/tests/: client.rs  connection.rs  orient-client.rs  orient-connection.rs  orient-session.rs  orient-sessions.rs  session.rs  sessions.rs
orientdb-client/tests/common/: mod.rs
orientdb-macro/: Cargo.toml
orientdb-macro/src/: lib.rs  result.rs
orientdb/examples/: pooled-sessions.rs  query-session.rs  simple.rs
orientdb/src/: client.rs
orientdb/src/common/: mod.rs
orientdb/src/common/protocol/: buffer.rs  parser.rs  serializer.rs
orientdb/src/common/protocol/messages/: response.rs
orientdb/src/common/protocol/v37/: deserializer.rs  mod.rs  serializer.rs
orientdb/src/common/types/: document.rs  error.rs  mod.rs
orientdb/src/network/: conn.rs
orientdb/src/protocol/: decoder.rs  encoder.rs  mod.rs
orientdb/src/protocol/v37/: decoder.rs  encoder.rs  mod.rs
orientdb/src/types/: mod.rs
orientdb/tests/: client.rs  connection.rs  session.rs  sessions.rs
orientdb/tests/common/: mod.rs
