[package]
name = "orientdb-client"
version = "0.3.1"
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description= "A Rust client for OrientDB™"
repository = "https://github.com/wolf4ood/orientdb-rs"
keywords = ["database", "graphs","orientdb"]
categories = ["database"]
readme = "README.md"




[features]

default = []


async = ["async-std","async-trait","futures","mobc/async-std"]


[badges]
travis-ci = { repository = "wolf4ood/orientdb-rs" }
is-it-maintained-issue-resolution = { repository = "wolf4ood/orientdb-rs" }
is-it-maintained-open-issues = { repository = "wolf4ood/orientdb-rs" }
maintenance = {status = "actively-developed"}

[dependencies]
chrono = "0.4.7"
byteorder = "1.3.2"
r2d2 = "0.8.5"
nom = "5.0.0"
thiserror = "1.0.13"




async-std =  { version = "1.5.0", optional = true, features = ["unstable"] }
async-trait = { version = "0.1.10", optional = true }
futures =  { version="0.3.4", optional=true }
mobc = {version = "0.5.1", optional = true, default-features=false, features = ["unstable"] }








[dev-dependencies]
dotenv = "0.14.1"



[[example]]

name="async-simple"
path="examples/async-simple.rs"

required-features = ["async"]

[[example]]

name="async-pooled-sessions"
path="examples/async-pooled-sessions.rs"
required-features = ["async"]


[[example]]

name="async-live-query"
path="examples/async-live-query.rs"
required-features = ["async"]