[package]
name = "orientdb-macro"
version = "0.1.0"
authors = ["wolf4ood <enrico.risa@gmail.com>"]
edition = "2018"
description= "Macros for OrientDB Rust client"
repository = "https://github.com/wolf4ood/orientdb-rs"
keywords = ["database", "graphs","orientdb","macro"]
categories = ["database"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.9" }
syn = { version = "1.0.16", features = [ "full" ] }
quote = { version = "1.0.2"}