[package]
name = "orientdb-macro"
version = "0.2.0"
authors = ["wolf4ood <enrico.risa@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description= "Macros for OrientDB Rust client. Do not use directly"
repository = "https://github.com/wolf4ood/orientdb-rs"
keywords = ["database", "graphs","orientdb","macro"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.9" }
syn = { version = "2.0.45", features = [ "full" ] }
quote = { version = "1.0.2"}